# recipe-gui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
recipe-cli/: Cargo.toml  db.sqlite  db.sqlite-journal
recipe-cli/migrations/2023-11-19-185838_create_unit/: down.sql  up.sql
recipe-cli/migrations/2023-11-19-190220_create_unit_conversion/: down.sql  up.sql
recipe-cli/migrations/2023-11-19-190845_ingredient/: down.sql  up.sql
recipe-cli/src/: lib.rs  main.rs  models.rs  schema.rs
recipe-cli/src/query/: add_ingredients.rs  add_recipes.rs  get_recipe_max_id.rs  get_recipes.rs  get_units.rs
recipe-cli/src/tui/: add_recipe.rs  display_recipe_information.rs  tui.rs  utils.rs  view_recipes.rs
src/: main.cpp
src/addrecipewindow/: addrecipewindow.cpp  addrecipewindow.h
src/database/: SQLiteHelper.cpp  SQLiteHelper.h  db.sqlite3  init_db.sql  models.h  populate_defaults.sql
src/database/modelStructs/: Ingredient.h  Recipe.h  RecipeIngredients.h  Unit.h  UnitConversions.h
src/generatelistwindow/: generatelistwindow.cpp  generatelistwindow.h
src/mainwindow/: mainwindow.cpp  mainwindow.h
src/viewrecipewindow/: viewrecipewindow.cpp  viewrecipewindow.h
