[package]
name = "recipe-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite", "numeric"] }
diesel_cli = { version = "2.1.1", features = ["sqlite"] }
cursive = { git = "https://github.com/gyscos/cursive", features = ["builder"] }
dotenv = { version = "0.15.0", default-features = false }
